kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-analyzer-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: mysql-analyzer
  type: NodePort
