kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-analyzer-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: msqlmcp.elamaras.people.aws.dev
    http:
      paths:
      - backend:
          service:
            name: mysql-analyzer-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: mlops-ingress-80ac0516251579df.elb.us-west-2.amazonaws.com
